--- a/src/index.html
+++ b/src/index.html
@@ -19,7 +19,7 @@
 				<div class="intro__container">
 
 					<h1 class="intro__title title-h1">Посуточная аренда загородных <br> домов у Истринского водохранилища</h1>
-
+					<h2 class="intro__subtitle">Уютные дома в часе езды от Москвы, среди березового леса с сервисом как в пятизвездочном отеле</h2>
 				</div>
 
 			</section>
