--- a/src/index.html
+++ b/src/index.html
@@ -17,9 +17,39 @@
 				</div>
 
 				<div class="intro__container">
+					<div class="intro__wrapper">
+						<div class="intro__content">
+							<h1 class="intro__title title-h1">Посуточная аренда загородных <br> домов у Истринского водохранилища</h1>
+							<h2 class="intro__subtitle">Уютные дома в часе езды от Москвы, среди березового леса с сервисом как в
+								пятизвездочном отеле</h2>
+						</div>
+						<a href="" class="intro__button">
+							<svg class="round-svg" width="170" height="170" viewBox="0 0 170 170" fill="none" xmlns="http://www.w3.org/2000/svg">
+								<circle cx="85" cy="85" r="84.5" stroke="white" stroke-opacity="0.7" stroke-dasharray="6 6" />
+							</svg>
+							<svg width="30" height="30" viewBox="0 0 30 30" fill="none" xmlns="http://www.w3.org/2000/svg">
+								<path
+									d="M15.2787 14.5513L14.9999 14.8263L14.7199 14.5513C14.1996 14.0376 13.4979 13.7496 12.7668 13.7496C12.0357 13.7496 11.334 14.0376 10.8137 14.5513C10.5555 14.7997 10.35 15.0977 10.2097 15.4274C10.0694 15.7571 9.99707 16.1117 9.99707 16.4701C9.99707 16.8284 10.0694 17.183 10.2097 17.5127C10.35 17.8424 10.5555 18.1404 10.8137 18.3888L14.9999 22.5001L19.1862 18.3888C19.4444 18.1404 19.6498 17.8424 19.7901 17.5127C19.9305 17.183 20.0028 16.8284 20.0028 16.4701C20.0028 16.1117 19.9305 15.7571 19.7901 15.4274C19.6498 15.0977 19.4444 14.7997 19.1862 14.5513C18.6657 14.0376 17.9638 13.7495 17.2324 13.7495C16.5011 13.7495 15.7992 14.0376 15.2787 14.5513Z"
+									fill="#F6F4EF" />
+								<path
+									d="M27.1337 14.1163L15.8837 2.86626C15.7677 2.75008 15.63 2.6579 15.4783 2.59501C15.3267 2.53213 15.1641 2.49976 15 2.49976C14.8358 2.49976 14.6733 2.53213 14.5216 2.59501C14.37 2.6579 14.2322 2.75008 14.1162 2.86626L2.86623 14.1163C2.69147 14.2911 2.57246 14.5138 2.52425 14.7562C2.47604 14.9987 2.50079 15.25 2.59538 15.4783C2.68997 15.7067 2.85014 15.9019 3.05565 16.0393C3.26117 16.1766 3.50279 16.25 3.74998 16.25H4.99998V25C4.99998 26.3788 6.12123 27.5 7.49998 27.5H22.5C23.8787 27.5 25 26.3788 25 25V16.25H26.25C26.4972 16.25 26.7388 16.1766 26.9443 16.0393C27.1498 15.9019 27.31 15.7067 27.4046 15.4783C27.4992 15.25 27.5239 14.9987 27.4757 14.7562C27.4275 14.5138 27.3085 14.2911 27.1337 14.1163ZM22.5012 25H7.49998V13.0188L15 5.51876L22.5 13.0188V18.75L22.5012 25Z"
+									fill="#F6F4EF" />
+							</svg>
+							<span>Забронировать <br> дом</span>
+						</a>
+					</div>
 
-					<h1 class="intro__title title-h1">Посуточная аренда загородных <br> домов у Истринского водохранилища</h1>
-					<h2 class="intro__subtitle">Уютные дома в часе езды от Москвы, среди березового леса с сервисом как в пятизвездочном отеле</h2>
+					<div class="intro__bottom">
+						<div class="intro__items">
+<div class="intro__item">
+	
+</div>
+
+						</div>
+
+					</div>
+
+
 				</div>
 
 			</section>
