--- a/src/index.html
+++ b/src/index.html
@@ -24,7 +24,8 @@
 								пятизвездочном отеле</h2>
 						</div>
 						<a href="" class="intro__button">
-							<svg class="round-svg" width="170" height="170" viewBox="0 0 170 170" fill="none" xmlns="http://www.w3.org/2000/svg">
+							<svg class="round-svg" width="170" height="170" viewBox="0 0 170 170" fill="none"
+								xmlns="http://www.w3.org/2000/svg">
 								<circle cx="85" cy="85" r="84.5" stroke="white" stroke-opacity="0.7" stroke-dasharray="6 6" />
 							</svg>
 							<svg width="30" height="30" viewBox="0 0 30 30" fill="none" xmlns="http://www.w3.org/2000/svg">
@@ -41,9 +42,27 @@
 
 					<div class="intro__bottom">
 						<div class="intro__items">
-<div class="intro__item">
-	
-</div>
+
+							<div class="intro__item">
+								<img src="@img/frame.png" alt="" class="intro__frame">
+								<img src="@img/intro/01.jpg" alt="" class="intro__photo">
+							</div>
+
+							<div class="intro__item">
+								<img src="@img/frame.png" alt="" class="intro__frame">
+								<img src="@img/intro/02.jpg" alt="" class="intro__photo">
+							</div>
+
+							<div class="intro__item">
+								<img src="@img/frame.png" alt="" class="intro__frame">
+								<img src="@img/intro/03.jpg" alt="" class="intro__photo">
+							</div>
+
+							<div class="intro__item">
+								<img src="@img/frame.png" alt="" class="intro__frame">
+								<img src="@img/intro/04.jpg" alt="" class="intro__photo">
+							</div>
+
 
 						</div>
 
