--- a/src/index.html
+++ b/src/index.html
@@ -11,10 +11,10 @@
 		<main class="page">
 
 			<section class="intro">
-				<div class="intro__background">
-					<img class="intro__img" src="@img/intro.jpg" alt="Главное изображение">
+				<img class="intro__img" src="@img/intro.jpg" alt="Главное изображение">
+				<!-- <div class="intro__background">
 
-				</div>
+				</div> -->
 
 				<div class="intro__container">
 					<div class="intro__wrapper">
@@ -41,8 +41,12 @@
 					</div>
 
 					<div class="intro__bottom">
+
+						<img src="@img/line" alt="Image">
+
 						<div class="intro__items">
 
+							
 							<div class="intro__item">
 								<img src="@img/frame.png" alt="" class="intro__frame">
 								<img src="@img/intro/01.jpg" alt="" class="intro__photo">
