--- a/src/index.html
+++ b/src/index.html
@@ -42,29 +42,33 @@
 
 					<div class="intro__bottom">
 
-						<img src="@img/line" alt="Image">
+						<img class="intro__line" src="@img/long-line.svg" alt="Image">
 
 						<div class="intro__items">
 
-							
+
 							<div class="intro__item">
 								<img src="@img/frame.png" alt="" class="intro__frame">
 								<img src="@img/intro/01.jpg" alt="" class="intro__photo">
+								<div class="intro__value">чан</div>
 							</div>
 
 							<div class="intro__item">
 								<img src="@img/frame.png" alt="" class="intro__frame">
 								<img src="@img/intro/02.jpg" alt="" class="intro__photo">
+								<div class="intro__value">баня</div>
 							</div>
 
 							<div class="intro__item">
 								<img src="@img/frame.png" alt="" class="intro__frame">
 								<img src="@img/intro/03.jpg" alt="" class="intro__photo">
+								<div class="intro__value">детские зоны</div>
 							</div>
 
 							<div class="intro__item">
 								<img src="@img/frame.png" alt="" class="intro__frame">
 								<img src="@img/intro/04.jpg" alt="" class="intro__photo">
+								<div class="intro__value">природа <br> и свежий воздух</div>
 							</div>
 
 
