--- a/src/index.html
+++ b/src/index.html
@@ -11,10 +11,9 @@
 		<main class="page">
 
 			<section class="intro">
-				<img class="intro__img" src="@img/intro.jpg" alt="Главное изображение">
-				<!-- <div class="intro__background">
-
-				</div> -->
+				<div class="intro__background">
+					<img class="intro__img" src="@img/intro.jpg" alt="Главное изображение">
+				</div>
 
 				<div class="intro__container">
 					<div class="intro__wrapper">
@@ -80,6 +79,21 @@
 				</div>
 
 			</section>
+
+
+			Lorem ipsum dolor sit, amet consectetur adipisicing elit. Veniam aliquam esse minus minima impedit nemo eaque
+			veritatis perspiciatis sapiente quisquam voluptatum itaque pariatur dolores obcaecati mollitia quibusdam
+			architecto, sint velit?
+			Adipisci iusto ratione molestiae laudantium est soluta? Molestiae qui minus est eaque laudantium deserunt, facere
+			fugit, nesciunt iure animi optio officia saepe obcaecati vero quidem pariatur voluptatibus vitae atque vel?
+			Ullam voluptatem ipsa aperiam. Cupiditate aut, consectetur ea praesentium rerum, expedita mollitia laborum harum
+			doloribus quod similique assumenda? Omnis officia amet perspiciatis maxime ex eius culpa eveniet ipsam corrupti
+			sequi.
+			Alias, molestiae? Dignissimos maiores alias sit facilis, beatae laboriosam magni vel. Fuga voluptas, porro quae
+			minima adipisci ad, corrupti, ea consequatur illum soluta distinctio tempora officia ipsam unde quos quod!
+			Provident sit veritatis quaerat unde quis, enim laboriosam voluptatum amet exercitationem reprehenderit rerum
+			facere minus ratione, a vitae repudiandae, accusamus quas. Qui porro odit ducimus, nemo officiis quibusdam
+			adipisci nesciunt.
 
 		</main>
 
