--- a/src/index.html
+++ b/src/index.html
@@ -12,6 +12,8 @@
 
 			<section class="intro">
 
+				<div class="intro-mobile__container"></div>
+
 				<div class="intro__background">
 					<img class="intro__img" src="@img/intro.jpg" alt="Главное изображение">
 				</div>
@@ -55,7 +57,7 @@
 						</a>
 					</div>
 
-					<div class="intro__bottom">
+					<div class="intro__bottom" data-da=".intro-mobile__container, 767">
 
 						<img class="intro__line" src="@img/long-line.svg" alt="Image">
 
@@ -94,9 +96,14 @@
 
 				</div>
 
+
 			</section>
 
-
+<section class="block">
+	<div class="block__container">
+			<a href="" class="link">LINK</a>
+	</div>
+</section>
 			Lorem ipsum dolor sit, amet consectetur adipisicing elit. Veniam aliquam esse minus minima impedit nemo eaque
 			veritatis perspiciatis sapiente quisquam voluptatum itaque pariatur dolores obcaecati mollitia quibusdam
 			architecto, sint velit?
