--- a/src/html/_header.htm
+++ b/src/html/_header.htm
@@ -4,8 +4,10 @@
 		<div class="header__container header__container--wide">
 
 			<a href="" class="header__logo">
-				<img src="@img/white-logo.svg" alt="Логотип">
+				<img class="logo-desktop" src="@img/white-logo.svg" alt="Логотип">
+				<img class="logo-mobile" src="@img/black-logo.svg" alt="Логотип">
 			</a>
+
 
 
 			<div class="header__menu menu">
