--- a/src/index.html
+++ b/src/index.html
@@ -60,6 +60,7 @@
 					<div class="intro__bottom" data-da=".intro-mobile__container, 767">
 
 						<img class="intro__line" src="@img/long-line.svg" alt="Image">
+						<img class="intro__line--mob" src="@img/oo-line.svg" alt="Image">
 
 						<div class="intro__items">
 
