--- a/src/index.html
+++ b/src/index.html
@@ -99,25 +99,12 @@
 
 
 			</section>
-
-<section class="block">
-	<div class="block__container">
-			<a href="" class="link">LINK</a>
-	</div>
-</section>
-			Lorem ipsum dolor sit, amet consectetur adipisicing elit. Veniam aliquam esse minus minima impedit nemo eaque
-			veritatis perspiciatis sapiente quisquam voluptatum itaque pariatur dolores obcaecati mollitia quibusdam
-			architecto, sint velit?
-			Adipisci iusto ratione molestiae laudantium est soluta? Molestiae qui minus est eaque laudantium deserunt, facere
-			fugit, nesciunt iure animi optio officia saepe obcaecati vero quidem pariatur voluptatibus vitae atque vel?
-			Ullam voluptatem ipsa aperiam. Cupiditate aut, consectetur ea praesentium rerum, expedita mollitia laborum harum
-			doloribus quod similique assumenda? Omnis officia amet perspiciatis maxime ex eius culpa eveniet ipsam corrupti
-			sequi.
-			Alias, molestiae? Dignissimos maiores alias sit facilis, beatae laboriosam magni vel. Fuga voluptas, porro quae
-			minima adipisci ad, corrupti, ea consequatur illum soluta distinctio tempora officia ipsam unde quos quod!
-			Provident sit veritatis quaerat unde quis, enim laboriosam voluptatum amet exercitationem reprehenderit rerum
-			facere minus ratione, a vitae repudiandae, accusamus quas. Qui porro odit ducimus, nemo officiis quibusdam
-			adipisci nesciunt.
+			
+			<section class="flatpoint">
+				<div class="flatpoint__container">
+						<img src="@img/m-logo.svg" alt="Image">
+				</div>
+			</section>
 
 		</main>
 
