--- a/src/index.html
+++ b/src/index.html
@@ -103,6 +103,116 @@
 			<section class="flatpoint">
 				<div class="flatpoint__container">
 						<img src="@img/m-logo.svg" alt="Image">
+						<h2 class="title-h2">
+							Ваша особенная точка на карте загородного отдыха ♥️
+						</h2>
+
+						<div class="flatpoint__items">
+
+							<div class="flatpoint__item">
+								<div class="flatpoint__item-text">
+
+									<div class="flatpoint__item-title">
+										<div class="flatpoint__item-number">1</div>
+										<h3 class="flatpoint__item-name">
+										Полная комплектация домов
+										</h3>
+									</div>
+
+									<div class="flatpoint__text-box">
+										<p>В каждом доме есть все для отдыха: белье, посуда, техника, банные принадлежности. По запросу предоставим детскую кроватку и стульчик.</p>
+										<span>Вам не нужно ничего привозить с собой, просто приезжайте и отдыхайте.</span>
+									</div>
+								</div>
+								<img src="@img/flatpoint/1.jpg" alt="" class="flatpoint__img">
+							</div>
+							<div class="flatpoint__item">
+								<div class="flatpoint__item-text">
+
+									<div class="flatpoint__item-title">
+										<div class="flatpoint__item-number">2</div>
+										<h3 class="flatpoint__item-name">
+										Сервис на уровне 5
+										</h3>
+									</div>
+
+									<div class="flatpoint__text-box">
+										<p>На территории постоянно находятся менеджер и мастер, которые оперативно решают любые вопросы гостей.</p>
+										<span>Ваш комфорт — наш приоритет.</span>
+									</div>
+								</div>
+								<img src="@img/flatpoint/2.jpg" alt="" class="flatpoint__img">
+							</div>
+							<div class="flatpoint__item">
+								<div class="flatpoint__item-text">
+
+									<div class="flatpoint__item-title">
+										<div class="flatpoint__item-number">3</div>
+										<h3 class="flatpoint__item-name">
+									Отдых на свежем воздухе
+										</h3>
+									</div>
+
+									<div class="flatpoint__text-box">
+										<p>Дома расположены среди берёзового леса, а до водохранилища несколько минут пешком. Мангал, костровая зона, качели и детские площадки позволяют отдыхать на свежем воздухе, не покидая окрестности дома.</p>
+		
+									</div>
+								</div>
+								<img src="@img/flatpoint/3.jpg" alt="" class="flatpoint__img">
+							</div>
+							<div class="flatpoint__item">
+								<div class="flatpoint__item-text">
+
+									<div class="flatpoint__item-title">
+										<div class="flatpoint__item-number">4</div>
+										<h3 class="flatpoint__item-name">
+										Просторные дома
+										</h3>
+									</div>
+
+									<div class="flatpoint__text-box">
+										<p>Наши дома рассчитаны на компании до 8 человек.Просторные комнаты, открытые веранды и оборудованные кухни делают проживание комфортным для отдыха с семьей, друзьями и коллегами.</p>
+								
+									</div>
+								</div>
+								<img src="@img/flatpoint/4.jpg" alt="" class="flatpoint__img">
+							</div>
+							<div class="flatpoint__item">
+								<div class="flatpoint__item-text">
+
+									<div class="flatpoint__item-title">
+										<div class="flatpoint__item-number">5</div>
+										<h3 class="flatpoint__item-name">
+								Забота еще до заезда
+										</h3>
+									</div>
+
+									<div class="flatpoint__text-box">
+										<p>Подберем дом под ваш запрос, заранее подготовим и прогреем, организуем дополнительные услуги.</p>
+										<span>Мы заботимся о вашем отдыхе так, как заботились бы о себе.</span>
+									</div>
+								</div>
+								<img src="@img/flatpoint/5.jpg" alt="" class="flatpoint__img">
+							</div>
+							<div class="flatpoint__item">
+								<div class="flatpoint__item-text">
+
+									<div class="flatpoint__item-title">
+										<div class="flatpoint__item-number">6</div>
+										<h3 class="flatpoint__item-name">
+										SPA-релакс
+										</h3>
+									</div>
+
+									<div class="flatpoint__text-box">
+										<p>Баня и чан доступны для бронирования независимо от того, в каком доме вы живете. Формат для теплых вечеров, тишины и маленьких праздников.</p>
+	
+									</div>
+								</div>
+								<img src="@img/flatpoint/1.jpg" alt="" class="flatpoint__img">
+							</div>
+
+						</div>
 				</div>
 			</section>
 
