--- a/src/index.html
+++ b/src/index.html
@@ -99,120 +99,144 @@
 
 
 			</section>
-			
+
 			<section class="flatpoint">
 				<div class="flatpoint__container">
-						<img src="@img/m-logo.svg" alt="Image">
-						<h2 class="title-h2">
-							Ваша особенная точка на карте загородного отдыха ♥️
-						</h2>
+					<img src="@img/m-logo.svg" alt="Image">
+					<h2 class="title-h2">
+						Ваша особенная точка на карте загородного отдыха ♥️
+					</h2>
 
-						<div class="flatpoint__items">
+					<div class="flatpoint__items">
 
-							<div class="flatpoint__item">
-								<div class="flatpoint__item-text">
+						<div class="flatpoint__item">
+							<div class="flatpoint__item-text">
 
-									<div class="flatpoint__item-title">
-										<div class="flatpoint__item-number">1</div>
-										<h3 class="flatpoint__item-name">
+								<div class="flatpoint__item-title">
+									<div class="flatpoint__item-number">1</div>
+									<h3 class="flatpoint__item-name">
 										Полная комплектация домов
-										</h3>
-									</div>
-
-									<div class="flatpoint__text-box">
-										<p>В каждом доме есть все для отдыха: белье, посуда, техника, банные принадлежности. По запросу предоставим детскую кроватку и стульчик.</p>
-										<span>Вам не нужно ничего привозить с собой, просто приезжайте и отдыхайте.</span>
-									</div>
+									</h3>
 								</div>
-								<img src="@img/flatpoint/1.jpg" alt="" class="flatpoint__img">
-							</div>
-							<div class="flatpoint__item">
-								<div class="flatpoint__item-text">
 
-									<div class="flatpoint__item-title">
-										<div class="flatpoint__item-number">2</div>
-										<h3 class="flatpoint__item-name">
-										Сервис на уровне 5
-										</h3>
-									</div>
-
-									<div class="flatpoint__text-box">
-										<p>На территории постоянно находятся менеджер и мастер, которые оперативно решают любые вопросы гостей.</p>
-										<span>Ваш комфорт — наш приоритет.</span>
-									</div>
+								<div class="flatpoint__text-box">
+									<p>В каждом доме есть все для отдыха: белье, посуда, техника, банные принадлежности. По запросу
+										предоставим детскую кроватку и стульчик.</p>
+									<span>Вам не нужно ничего привозить с собой, просто приезжайте и отдыхайте.</span>
 								</div>
-								<img src="@img/flatpoint/2.jpg" alt="" class="flatpoint__img">
 							</div>
-							<div class="flatpoint__item">
-								<div class="flatpoint__item-text">
-
-									<div class="flatpoint__item-title">
-										<div class="flatpoint__item-number">3</div>
-										<h3 class="flatpoint__item-name">
-									Отдых на свежем воздухе
-										</h3>
-									</div>
-
-									<div class="flatpoint__text-box">
-										<p>Дома расположены среди берёзового леса, а до водохранилища несколько минут пешком. Мангал, костровая зона, качели и детские площадки позволяют отдыхать на свежем воздухе, не покидая окрестности дома.</p>
-		
-									</div>
-								</div>
-								<img src="@img/flatpoint/3.jpg" alt="" class="flatpoint__img">
-							</div>
-							<div class="flatpoint__item">
-								<div class="flatpoint__item-text">
-
-									<div class="flatpoint__item-title">
-										<div class="flatpoint__item-number">4</div>
-										<h3 class="flatpoint__item-name">
-										Просторные дома
-										</h3>
-									</div>
-
-									<div class="flatpoint__text-box">
-										<p>Наши дома рассчитаны на компании до 8 человек.Просторные комнаты, открытые веранды и оборудованные кухни делают проживание комфортным для отдыха с семьей, друзьями и коллегами.</p>
-								
-									</div>
-								</div>
-								<img src="@img/flatpoint/4.jpg" alt="" class="flatpoint__img">
-							</div>
-							<div class="flatpoint__item">
-								<div class="flatpoint__item-text">
-
-									<div class="flatpoint__item-title">
-										<div class="flatpoint__item-number">5</div>
-										<h3 class="flatpoint__item-name">
-								Забота еще до заезда
-										</h3>
-									</div>
-
-									<div class="flatpoint__text-box">
-										<p>Подберем дом под ваш запрос, заранее подготовим и прогреем, организуем дополнительные услуги.</p>
-										<span>Мы заботимся о вашем отдыхе так, как заботились бы о себе.</span>
-									</div>
-								</div>
-								<img src="@img/flatpoint/5.jpg" alt="" class="flatpoint__img">
-							</div>
-							<div class="flatpoint__item">
-								<div class="flatpoint__item-text">
-
-									<div class="flatpoint__item-title">
-										<div class="flatpoint__item-number">6</div>
-										<h3 class="flatpoint__item-name">
-										SPA-релакс
-										</h3>
-									</div>
-
-									<div class="flatpoint__text-box">
-										<p>Баня и чан доступны для бронирования независимо от того, в каком доме вы живете. Формат для теплых вечеров, тишины и маленьких праздников.</p>
-	
-									</div>
-								</div>
-								<img src="@img/flatpoint/1.jpg" alt="" class="flatpoint__img">
-							</div>
-
+							<img src="@img/flatpoint/1.jpg" alt="" class="flatpoint__img">
 						</div>
+						<div class="flatpoint__item">
+							<div class="flatpoint__item-text">
+
+								<div class="flatpoint__item-title">
+									<div class="flatpoint__item-number">2</div>
+									<h3 class="flatpoint__item-name">
+										Сервис на уровне 5 <span><svg width="28" height="25" viewBox="0 0 28 25" fill="none"
+												xmlns="http://www.w3.org/2000/svg">
+												<path
+													d="M13.7903 0L17.0457 9.32827H27.5806L19.0577 15.0935L22.3132 24.4217L13.7903 18.6565L5.2674 24.4217L8.52285 15.0935L-3.62396e-05 9.32827H10.5348L13.7903 0Z"
+													fill="#FF804B" />
+											</svg></span>
+									</h3>
+								</div>
+
+								<div class="flatpoint__text-box">
+									<p>На территории постоянно находятся менеджер и мастер, которые оперативно решают любые вопросы
+										гостей.</p>
+									<span>Ваш комфорт — наш приоритет.</span>
+								</div>
+							</div>
+							<img src="@img/flatpoint/2.jpg" alt="" class="flatpoint__img">
+						</div>
+						<div class="flatpoint__item">
+							<div class="flatpoint__item-text">
+
+								<div class="flatpoint__item-title">
+									<div class="flatpoint__item-number">3</div>
+									<h3 class="flatpoint__item-name">
+										Отдых на свежем воздухе
+									</h3>
+								</div>
+
+								<div class="flatpoint__text-box">
+									<p>Дома расположены среди берёзового леса, а до водохранилища несколько минут пешком. Мангал,
+										костровая зона, качели и детские площадки позволяют отдыхать на свежем воздухе, не покидая
+										окрестности дома.</p>
+
+								</div>
+							</div>
+							<img src="@img/flatpoint/3.jpg" alt="" class="flatpoint__img">
+						</div>
+						<div class="flatpoint__item">
+							<div class="flatpoint__item-text">
+
+								<div class="flatpoint__item-title">
+									<div class="flatpoint__item-number">4</div>
+									<h3 class="flatpoint__item-name">
+										Просторные дома
+									</h3>
+								</div>
+
+								<div class="flatpoint__text-box">
+									<p>Наши дома рассчитаны на компании до 8 человек.Просторные комнаты, открытые веранды и оборудованные
+										кухни делают проживание комфортным для отдыха с семьей, друзьями и коллегами.</p>
+
+								</div>
+							</div>
+							<img src="@img/flatpoint/4.jpg" alt="" class="flatpoint__img">
+						</div>
+						<div class="flatpoint__item">
+							<div class="flatpoint__item-text">
+
+								<div class="flatpoint__item-title">
+									<div class="flatpoint__item-number">5</div>
+									<h3 class="flatpoint__item-name">
+										Забота еще до заезда
+									</h3>
+								</div>
+
+								<div class="flatpoint__text-box">
+									<p>Подберем дом под ваш запрос, заранее подготовим и прогреем, организуем дополнительные услуги.</p>
+									<span>Мы заботимся о вашем отдыхе так, как заботились бы о себе.</span>
+								</div>
+							</div>
+							<img src="@img/flatpoint/5.jpg" alt="" class="flatpoint__img">
+						</div>
+						<div class="flatpoint__item">
+							<div class="flatpoint__item-text">
+
+								<div class="flatpoint__item-title">
+									<div class="flatpoint__item-number">6</div>
+									<h3 class="flatpoint__item-name">
+										SPA-релакс
+									</h3>
+								</div>
+
+								<div class="flatpoint__text-box">
+									<p>Баня и чан доступны для бронирования независимо от того, в каком доме вы живете. Формат для теплых
+										вечеров, тишины и маленьких праздников.</p>
+
+								</div>
+							</div>
+							<img src="@img/flatpoint/1.jpg" alt="" class="flatpoint__img">
+						</div>
+
+					</div>
+
+					<div class="flatpoint__button button">
+						<span>Забронировать дом</span>
+						<svg width="19" height="19" viewBox="0 0 19 19" fill="none" xmlns="http://www.w3.org/2000/svg">
+							<path
+								d="M9.28959 8.84716L9.12011 9.01436L8.94987 8.84716C8.63353 8.53485 8.2069 8.35973 7.76237 8.35973C7.31784 8.35973 6.89121 8.53485 6.57487 8.84716C6.41787 8.9982 6.29297 9.17937 6.20766 9.37983C6.12234 9.58029 6.07837 9.7959 6.07837 10.0138C6.07837 10.2316 6.12234 10.4472 6.20766 10.6477C6.29297 10.8481 6.41787 11.0293 6.57487 11.1804L9.12011 13.68L11.6653 11.1804C11.8223 11.0293 11.9472 10.8481 12.0326 10.6477C12.1179 10.4472 12.1618 10.2316 12.1618 10.0138C12.1618 9.7959 12.1179 9.58029 12.0326 9.37983C11.9472 9.17937 11.8223 8.9982 11.6653 8.84716C11.3489 8.5348 10.9221 8.35966 10.4775 8.35966C10.0328 8.35966 9.60605 8.5348 9.28959 8.84716Z"
+								fill="#981214" />
+							<path
+								d="M16.4974 8.58268L9.65742 1.74268C9.5869 1.67205 9.50315 1.61601 9.41095 1.57777C9.31875 1.53953 9.21992 1.51985 9.1201 1.51985C9.02029 1.51985 8.92145 1.53953 8.82926 1.57777C8.73706 1.61601 8.6533 1.67205 8.58278 1.74268L1.74278 8.58268C1.63653 8.68897 1.56417 8.82438 1.53486 8.97178C1.50555 9.11918 1.5206 9.27197 1.57811 9.41082C1.63562 9.54967 1.733 9.66836 1.85795 9.75187C1.9829 9.83538 2.12981 9.87997 2.2801 9.88H3.0401V15.2C3.0401 16.0383 3.72182 16.72 4.5601 16.72H13.6801C14.5184 16.72 15.2001 16.0383 15.2001 15.2V9.88H15.9601C16.1104 9.87997 16.2573 9.83538 16.3822 9.75187C16.5072 9.66836 16.6046 9.54967 16.6621 9.41082C16.7196 9.27197 16.7347 9.11918 16.7053 8.97178C16.676 8.82438 16.6037 8.68897 16.4974 8.58268ZM13.6809 15.2H4.5601V7.9154L9.1201 3.3554L13.6801 7.9154V11.4L13.6809 15.2Z"
+								fill="#981214" />
+						</svg>
+					</div>
+
 				</div>
 			</section>
 
