--- a/src/index.html
+++ b/src/index.html
@@ -101,6 +101,7 @@
 			</section>
 
 			<section class="flatpoint">
+				<img src="@img/flatpoint/flatpoint-line.svg" alt="" class="flatpoint__line">
 				<div class="flatpoint__container">
 					<img class="flatpoint__logo" src="@img/m-logo.svg" alt="Image">
 					<h2 class="title-h2 flatpoint__title">
