--- a/src/index.html
+++ b/src/index.html
@@ -246,6 +246,21 @@
 				</div>
 			</section>
 
+			<section class="activities">
+				<div class="activities__container">
+						<h2 class="activities__title title-h2">Активности в окрестностях</h2>
+				</div>
+				<div class="activities__container--full">
+					<div class="activities__items-scroll">
+						<div class="activities__slider swiper">
+							<div class="activities__wrapper swiper-wrapper">
+								<div class="activities__slide swiper-slide"></div>
+							</div>
+						</div>
+					</div>
+				</div>
+			</section>
+
 		</main>
 
 
