--- a/src/index.html
+++ b/src/index.html
@@ -254,7 +254,9 @@
 					<div class="activities__items-scroll">
 						<div class="activities__slider swiper">
 							<div class="activities__wrapper swiper-wrapper">
-								<div class="activities__slide swiper-slide"></div>
+								<div class="activities__slide swiper-slide">
+									
+								</div>
 							</div>
 						</div>
 					</div>
