--- a/src/index.html
+++ b/src/index.html
@@ -248,14 +248,17 @@
 
 			<section class="activities">
 				<div class="activities__container">
-						<h2 class="activities__title title-h2">Активности в окрестностях</h2>
+					<h2 class="activities__title title-h2">Активности в окрестностях</h2>
 				</div>
 				<div class="activities__container--full">
 					<div class="activities__items-scroll">
 						<div class="activities__slider swiper">
 							<div class="activities__wrapper swiper-wrapper">
 								<div class="activities__slide swiper-slide">
-									
+									<img src="@img/frame.png" alt="" class="activities__tape">
+									<img src="@img/frame.png" alt="" class="activities__frame">
+									<img src="@img/intro/01.jpg" alt="" class="intro__photo">
+									<div class="activities__value">Березовый лес</div>
 								</div>
 							</div>
 						</div>
