--- a/src/index.html
+++ b/src/index.html
@@ -255,9 +255,9 @@
 						<div class="activities__slider swiper">
 							<div class="activities__wrapper swiper-wrapper">
 								<div class="activities__slide swiper-slide">
-									<img src="@img/frame.png" alt="" class="activities__tape">
-									<img src="@img/frame.png" alt="" class="activities__frame">
-									<img src="@img/intro/01.jpg" alt="" class="intro__photo">
+									<img src="@img/activities/tape1.png" alt="" class="activities__tape">
+									<img src="@img/activities/frame.png" alt="" class="activities__frame">
+									<img src="@img/activities/01.jpg" alt="" class="intro__photo">
 									<div class="activities__value">Березовый лес</div>
 								</div>
 							</div>
