--- a/src/index.html
+++ b/src/index.html
@@ -228,6 +228,11 @@
 
 					</div>
 
+				</div>
+			</section>
+
+			<section class="activities">
+				<div class="activities__container">
 					<a href="" class="flatpoint__button button">
 						<span>Забронировать дом</span>
 
@@ -242,28 +247,36 @@
 							</svg>
 						</div>
 					</a>
-
-				</div>
-			</section>
-
-			<section class="activities">
-				<div class="activities__container">
-					<h2 class="activities__title title-h2">Активности в окрестностях</h2>
+					<h2 class="activities__title title-h2">Активности <br> в окрестностях</h2>
 				</div>
 				<div class="activities__container--full">
 					<div class="activities__items-scroll">
 						<div class="activities__slider swiper">
 							<div class="activities__wrapper swiper-wrapper">
 								<div class="activities__slide swiper-slide">
-									<img src="@img/activities/tape1.png" alt="" class="activities__tape">
-									<img src="@img/activities/frame.png" alt="" class="activities__frame">
-									<img src="@img/activities/01.jpg" alt="" class="intro__photo">
-									<div class="activities__value">Березовый лес</div>
+									<div class="activities__item">
+										<img src="@img/activities/tapesframes/01.png" alt="" class="activities__frame">
+										<img src="@img/activities/01.jpg" alt="" class="activities__photo">
+										<div class="activities__value">Березовый лес</div>
+									</div>
 								</div>
 							</div>
 						</div>
 					</div>
 				</div>
+
+				<div class="activities__container">
+					<div class="activities__content">
+						<div class="activities__left-side">
+							<h3 class="activities__subtitle">После бронирования вы получите подробный гайд со всеми локациями,
+								контактами и промокодами </h3>
+							<p class="activities__text">Мы собрали в нем больше активностей, чем указано на сайте, чтобы ваш отдых
+								получился насыщенным и запоминающимся.</p>
+						</div>
+						<div class="activities__right-side"></div>
+					</div>
+				</div>
+
 			</section>
 
 		</main>
