--- a/src/index.html
+++ b/src/index.html
@@ -260,6 +260,55 @@
 										<div class="activities__value">Березовый лес</div>
 									</div>
 								</div>
+								<div class="activities__slide swiper-slide">
+									<div class="activities__item">
+										<img src="@img/activities/tapesframes/01.png" alt="" class="activities__frame">
+										<img src="@img/activities/01.jpg" alt="" class="activities__photo">
+										<div class="activities__value">Березовый лес</div>
+									</div>
+								</div>
+								<div class="activities__slide swiper-slide">
+									<div class="activities__item">
+										<img src="@img/activities/tapesframes/01.png" alt="" class="activities__frame">
+										<img src="@img/activities/01.jpg" alt="" class="activities__photo">
+										<div class="activities__value">Березовый лес</div>
+									</div>
+								</div>
+								<div class="activities__slide swiper-slide">
+									<div class="activities__item">
+										<img src="@img/activities/tapesframes/01.png" alt="" class="activities__frame">
+										<img src="@img/activities/01.jpg" alt="" class="activities__photo">
+										<div class="activities__value">Березовый лес</div>
+									</div>
+								</div>
+								<div class="activities__slide swiper-slide">
+									<div class="activities__item">
+										<img src="@img/activities/tapesframes/01.png" alt="" class="activities__frame">
+										<img src="@img/activities/01.jpg" alt="" class="activities__photo">
+										<div class="activities__value">Березовый лес</div>
+									</div>
+								</div>
+								<div class="activities__slide swiper-slide">
+									<div class="activities__item">
+										<img src="@img/activities/tapesframes/01.png" alt="" class="activities__frame">
+										<img src="@img/activities/01.jpg" alt="" class="activities__photo">
+										<div class="activities__value">Березовый лес</div>
+									</div>
+								</div>
+								<div class="activities__slide swiper-slide">
+									<div class="activities__item">
+										<img src="@img/activities/tapesframes/01.png" alt="" class="activities__frame">
+										<img src="@img/activities/01.jpg" alt="" class="activities__photo">
+										<div class="activities__value">Березовый лес</div>
+									</div>
+								</div>
+								<div class="activities__slide swiper-slide">
+									<div class="activities__item">
+										<img src="@img/activities/tapesframes/01.png" alt="" class="activities__frame">
+										<img src="@img/activities/01.jpg" alt="" class="activities__photo">
+										<div class="activities__value">Березовый лес</div>
+									</div>
+								</div>
 							</div>
 						</div>
 					</div>
