--- a/src/index.html
+++ b/src/index.html
@@ -249,64 +249,56 @@
 					</a>
 					<h2 class="activities__title title-h2">Активности <br> в окрестностях</h2>
 				</div>
-				<div class="activities__container--full">
+				<div class="activities__container--full2">
 					<div class="activities__items-scroll">
 						<div class="activities__slider swiper">
 							<div class="activities__wrapper swiper-wrapper">
 								<div class="activities__slide swiper-slide">
 									<div class="activities__item">
-										<img src="@img/activities/tapesframes/01.png" alt="" class="activities__frame">
-										<img src="@img/activities/01.jpg" alt="" class="activities__photo">
+										<img src="@img/activities/allinone/01a.png" alt="" class="activities__frame">
 										<div class="activities__value">Березовый лес</div>
 									</div>
 								</div>
 								<div class="activities__slide swiper-slide">
 									<div class="activities__item">
-										<img src="@img/activities/tapesframes/02.png" alt="" class="activities__frame">
-										<img src="@img/activities/02.jpg" alt="" class="activities__photo">
-										<div class="activities__value">Березовый лес</div>
+										<img src="@img/activities/allinone/02a.png" alt="" class="activities__frame">
+										<div class="activities__value">10 минут пешком <br> до водохранилища</div>
 									</div>
 								</div>
 								<div class="activities__slide swiper-slide">
 									<div class="activities__item">
-										<img src="@img/activities/tapesframes/03.png" alt="" class="activities__frame">
-										<img src="@img/activities/03.jpg" alt="" class="activities__photo">
-										<div class="activities__value">Березовый лес</div>
+										<img src="@img/activities/allinone/03a.png" alt="" class="activities__frame">
+										<div class="activities__value">Аренда снегоходов</div>
 									</div>
 								</div>
 								<div class="activities__slide swiper-slide">
 									<div class="activities__item">
-										<img src="@img/activities/tapesframes/02.png" alt="" class="activities__frame">
-										<img src="@img/activities/04.jpg" alt="" class="activities__photo">
-										<div class="activities__value">Березовый лес</div>
+										<img src="@img/activities/allinone/04a.png" alt="" class="activities__frame">
+										<div class="activities__value">Конный клуб</div>
 									</div>
 								</div>
 								<div class="activities__slide swiper-slide">
 									<div class="activities__item">
-										<img src="@img/activities/tapesframes/01.png" alt="" class="activities__frame">
-										<img src="@img/activities/05.jpg" alt="" class="activities__photo">
-										<div class="activities__value">Березовый лес</div>
+										<img src="@img/activities/allinone/05a.png" alt="" class="activities__frame">
+										<div class="activities__value">Ресторан в 3 <br> минутах на авто</div>
 									</div>
 								</div>
 								<div class="activities__slide swiper-slide">
 									<div class="activities__item">
-										<img src="@img/activities/tapesframes/06.png" alt="" class="activities__frame">
-										<img src="@img/activities/06.jpg" alt="" class="activities__photo">
-										<div class="activities__value">Березовый лес</div>
+										<img src="@img/activities/allinone/06a.png" alt="" class="activities__frame">
+										<div class="activities__value">Баня и чан на территории</div>
 									</div>
 								</div>
 								<div class="activities__slide swiper-slide">
 									<div class="activities__item">
-										<img src="@img/activities/tapesframes/03.png" alt="" class="activities__frame">
-										<img src="@img/activities/07.jpg" alt="" class="activities__photo">
-										<div class="activities__value">Березовый лес</div>
+										<img src="@img/activities/allinone/07a.png" alt="" class="activities__frame">
+										<div class="activities__value">SPA-комплекс в 7 <br> минутах на авто</div>
 									</div>
 								</div>
 								<div class="activities__slide swiper-slide">
 									<div class="activities__item">
-										<img src="@img/activities/tapesframes/06.png" alt="" class="activities__frame">
-										<img src="@img/activities/08.jpg" alt="" class="activities__photo">
-										<div class="activities__value">Березовый лес</div>
+										<img src="@img/activities/allinone/08a.png" alt="" class="activities__frame">
+										<div class="activities__value">Доставка еды</div>
 									</div>
 								</div>
 							</div>
