--- a/src/index.html
+++ b/src/index.html
@@ -255,50 +255,50 @@
 							<div class="activities__wrapper swiper-wrapper">
 								<div class="activities__slide swiper-slide">
 									<div class="activities__item">
-										<img src="@img/activities/allinone/01a.png" alt="" class="activities__frame">
-										<div class="activities__value">Березовый лес</div>
+										<img src="@img/activities/allinone/01a.png" alt="" id="img1" class="activities__frame">
+										<div class="activities__value" id="text1">Березовый лес</div>
 									</div>
 								</div>
 								<div class="activities__slide swiper-slide">
 									<div class="activities__item">
-										<img src="@img/activities/allinone/02a.png" alt="" class="activities__frame">
-										<div class="activities__value">10 минут пешком <br> до водохранилища</div>
+										<img src="@img/activities/allinone/02a.png" alt="" id="img2" class="activities__frame">
+										<div class="activities__value" id="text2">10 минут пешком <br> до водохранилища</div>
 									</div>
 								</div>
 								<div class="activities__slide swiper-slide">
 									<div class="activities__item">
-										<img src="@img/activities/allinone/03a.png" alt="" class="activities__frame">
-										<div class="activities__value">Аренда снегоходов</div>
+										<img src="@img/activities/allinone/03a.png" alt="" id="img3" class="activities__frame">
+										<div class="activities__value" id="text3">Аренда снегоходов</div>
 									</div>
 								</div>
 								<div class="activities__slide swiper-slide">
 									<div class="activities__item">
-										<img src="@img/activities/allinone/04a.png" alt="" class="activities__frame">
-										<div class="activities__value">Конный клуб</div>
+										<img src="@img/activities/allinone/04a.png" alt="" id="img4" class="activities__frame">
+										<div class="activities__value" id="text4">Конный клуб</div>
 									</div>
 								</div>
 								<div class="activities__slide swiper-slide">
 									<div class="activities__item">
-										<img src="@img/activities/allinone/05a.png" alt="" class="activities__frame">
-										<div class="activities__value">Ресторан в 3 <br> минутах на авто</div>
+										<img src="@img/activities/allinone/05a.png" alt="" id="img5" class="activities__frame">
+										<div class="activities__value" id="text5">Ресторан в 3 <br> минутах на авто</div>
 									</div>
 								</div>
 								<div class="activities__slide swiper-slide">
 									<div class="activities__item">
-										<img src="@img/activities/allinone/06a.png" alt="" class="activities__frame">
-										<div class="activities__value">Баня и чан на территории</div>
+										<img src="@img/activities/allinone/06a.png" alt="" id="img6" class="activities__frame">
+										<div class="activities__value" id="text6">Баня и чан на территории</div>
 									</div>
 								</div>
 								<div class="activities__slide swiper-slide">
 									<div class="activities__item">
-										<img src="@img/activities/allinone/07a.png" alt="" class="activities__frame">
-										<div class="activities__value">SPA-комплекс в 7 <br> минутах на авто</div>
+										<img src="@img/activities/allinone/07a.png" alt="" id="img7" class="activities__frame">
+										<div class="activities__value" id="text7">SPA-комплекс в 7 <br> минутах на авто</div>
 									</div>
 								</div>
 								<div class="activities__slide swiper-slide">
 									<div class="activities__item">
-										<img src="@img/activities/allinone/08a.png" alt="" class="activities__frame">
-										<div class="activities__value">Доставка еды</div>
+										<img src="@img/activities/allinone/08a.png" alt="" id="img8" class="activities__frame">
+										<div class="activities__value" id="text8">Доставка еды</div>
 									</div>
 								</div>
 							</div>
