--- a/src/index.html
+++ b/src/index.html
@@ -233,7 +233,7 @@
 
 			<section class="activities">
 				<div class="activities__container">
-					<a href="" class="flatpoint__button button">
+					<a href="" class="activities__button button">
 						<span>Забронировать дом</span>
 
 						<div class="intro__icon">
@@ -314,7 +314,9 @@
 							<p class="activities__text">Мы собрали в нем больше активностей, чем указано на сайте, чтобы ваш отдых
 								получился насыщенным и запоминающимся.</p>
 						</div>
-						<div class="activities__right-side"></div>
+						<div class="activities__right-side">
+							<img src="@img/activities/a-content-img.png" alt="" class="activities__img-content">
+						</div>
 					</div>
 				</div>
 
