--- a/src/index.html
+++ b/src/index.html
@@ -322,6 +322,86 @@
 
 			</section>
 
+			<section class="specials">
+				<div class="specials__container">
+					<div class="specials__content">
+						<div class="specials__left">
+							<h2 class="specials__title title-h2">Специальные предложения для вашего отдыха</h2>
+							<p class="specials__text">Мы ценим каждого гостя и хотим, чтобы ваш отдых был не только комфортным, но и
+								выгодным.</p>
+							<a href="" class="specials__button button">Забронировать дом и получить скидку</a>
+						</div>
+
+						<div class="specials__right">
+							<div class="specials__item">
+								<div class="specials__num">1</div>
+								<div class="specials__name">Предложение недели</div>
+								<div class="specials__icon"><svg width="15" height="15" viewBox="0 0 15 15" fill="none"
+										xmlns="http://www.w3.org/2000/svg">
+										<path d="M1.00012 7.48181H13.9637M13.9637 7.48181L7.48193 1M13.9637 7.48181L7.48193 13.9636"
+											stroke="white" stroke-width="2" stroke-linecap="round" stroke-linejoin="round" />
+									</svg></div>
+							</div>
+							<div class="specials__item">
+								<div class="specials__num">2</div>
+								<div class="specials__name">Любимые гости</div>
+								<div class="specials__icon"><svg width="15" height="15" viewBox="0 0 15 15" fill="none"
+										xmlns="http://www.w3.org/2000/svg">
+										<path d="M1.00012 7.48181H13.9637M13.9637 7.48181L7.48193 1M13.9637 7.48181L7.48193 13.9636"
+											stroke="white" stroke-width="2" stroke-linecap="round" stroke-linejoin="round" />
+									</svg></div>
+							</div>
+							<div class="specials__item">
+								<div class="specials__num">3</div>
+								<div class="specials__name">Длительное бронирование</div>
+								<div class="specials__icon"><svg width="15" height="15" viewBox="0 0 15 15" fill="none"
+										xmlns="http://www.w3.org/2000/svg">
+										<path d="M1.00012 7.48181H13.9637M13.9637 7.48181L7.48193 1M13.9637 7.48181L7.48193 13.9636"
+											stroke="white" stroke-width="2" stroke-linecap="round" stroke-linejoin="round" />
+									</svg></div>
+							</div>
+							<div class="specials__item">
+								<div class="specials__num">4</div>
+								<div class="specials__name">Повторное бронирование</div>
+								<div class="specials__icon"><svg width="15" height="15" viewBox="0 0 15 15" fill="none"
+										xmlns="http://www.w3.org/2000/svg">
+										<path d="M1.00012 7.48181H13.9637M13.9637 7.48181L7.48193 1M13.9637 7.48181L7.48193 13.9636"
+											stroke="white" stroke-width="2" stroke-linecap="round" stroke-linejoin="round" />
+									</svg></div>
+							</div>
+							<div class="specials__item">
+								<div class="specials__num">5</div>
+								<div class="specials__name">Акция «Приведи друга»</div>
+								<div class="specials__icon"><svg width="15" height="15" viewBox="0 0 15 15" fill="none"
+										xmlns="http://www.w3.org/2000/svg">
+										<path d="M1.00012 7.48181H13.9637M13.9637 7.48181L7.48193 1M13.9637 7.48181L7.48193 13.9636"
+											stroke="white" stroke-width="2" stroke-linecap="round" stroke-linejoin="round" />
+									</svg></div>
+							</div>
+							<div class="specials__item">
+								<div class="specials__num">6</div>
+								<div class="specials__name">Скидка на день рождения </div>
+								<div class="specials__icon"><svg width="15" height="15" viewBox="0 0 15 15" fill="none"
+										xmlns="http://www.w3.org/2000/svg">
+										<path d="M1.00012 7.48181H13.9637M13.9637 7.48181L7.48193 1M13.9637 7.48181L7.48193 13.9636"
+											stroke="white" stroke-width="2" stroke-linecap="round" stroke-linejoin="round" />
+									</svg></div>
+							</div>
+						</div>
+					</div>
+					<div class="specials__promo">
+						<div class="title-promo">Условия акции:</div>
+						<div class="item-promo-box">
+							<div class="item-promo">действует при бронировании от 2 ночей;</div>
+							<div class="item-promo">не суммируется с другими акциями и предложениями;</div>
+							<div class="item-promo">не действует при проживании по акционным ценам или в праздничные дни;</div>
+							<div class="item-promo">не распространяется на брони через другие системы бронирования.</div>
+						</div>
+					</div>
+
+				</div>
+			</section>
+
 		</main>
 
 
