--- a/src/index.html
+++ b/src/index.html
@@ -332,7 +332,7 @@
 							<a href="" class="specials__button button">Забронировать дом и получить скидку</a>
 						</div>
 
-						<div class="specials__right">
+						<div class="specials__right" data-da=".specials__left, 1100, 2">
 							<div class="specials__item">
 								<div class="specials__num">1</div>
 								<div class="specials__name">Предложение недели</div>
@@ -380,7 +380,7 @@
 							</div>
 							<div class="specials__item">
 								<div class="specials__num">6</div>
-								<div class="specials__name">Скидка на день рождения </div>
+								<div class="specials__name">Скидка на день рождения</div>
 								<div class="specials__icon"><svg width="15" height="15" viewBox="0 0 15 15" fill="none"
 										xmlns="http://www.w3.org/2000/svg">
 										<path d="M1.00012 7.48181H13.9637M13.9637 7.48181L7.48193 1M13.9637 7.48181L7.48193 13.9636"
@@ -389,7 +389,7 @@
 							</div>
 						</div>
 					</div>
-					<div class="specials__promo">
+					<div class="specials__promo" data-da=".specials__left, 1100, 3">
 						<div class="title-promo">Условия акции:</div>
 						<div class="item-promo-box">
 							<div class="item-promo">действует при бронировании от 2 ночей;</div>
