--- a/src/index.html
+++ b/src/index.html
@@ -402,6 +402,81 @@
 				</div>
 			</section>
 
+			<section class="pricing">
+				<div class="pricing__container">
+					<h2 class="pricing__title title-h2">Стоимость проживания включает следующие услуги и удобства:</h2>
+					<div class="pricing__content">
+						<div class="pricing__media">
+							<img src="@img/pricing/01.jpg" alt="Image">
+							<p class="pricing__text">Обращаем ваше внимание, что некоторые дополнительные услуги могут оплачиваться
+								отдельно. Рекомендуется уточнять эти моменты при бронировании.</p>
+						</div>
+						<div class="pricing__accordeon">
+
+							<div data-spollers class="spollers">
+								<details class="spollers__item">
+									<summary class="spollers__title">Проживание</summary>
+									<div class="spollers__body">Комфортные дома с современным интерьером и всем необходимым для отличного
+										отдыха.
+									</div>
+								</details>
+								<details class="spollers__item">
+									<summary class="spollers__title">Климат-контроль</summary>
+									<div class="spollers__body"> Кондиционер и/или обогреватель для создания оптимальных температурных
+										условий круглый год.
+									</div>
+								</details>
+								<details class="spollers__item">
+									<summary class="spollers__title">Wi-Fi</summary>
+									<div class="spollers__body"> Высокоскоростной доступ в Интернет на всей территории объекта.
+									</div>
+								</details>
+								<details class="spollers__item">
+									<summary class="spollers__title">Безопасность</summary>
+									<div class="spollers__body"> Система видеонаблюдения и охраны для спокойствия во время пребывания.
+									</div>
+								</details>
+								<details class="spollers__item">
+									<summary class="spollers__title">Уборка</summary>
+									<div class="spollers__body"> Регулярная уборка помещений, смена постельного белья и полотенец в
+										зависимости от срока проживания.
+									</div>
+								</details>
+								<details class="spollers__item">
+									<summary class="spollers__title">Парковка</summary>
+									<div class="spollers__body"> Бесплатная парковка для гостей.
+									</div>
+								</details>
+								<details class="spollers__item">
+									<summary class="spollers__title">Коммунальные услуги</summary>
+									<div class="spollers__body"> Включены расходы на воду, электроэнергию и отопление.
+									</div>
+								</details>
+								<details class="spollers__item">
+									<summary class="spollers__title">Мебель и текстиль</summary>
+									<div class="spollers__body">Полностью оборудованные помещения с качественной мебелью, постельными
+										принадлежностями и пушистыми
+										полотенцами.</div>
+								</details>
+								<details class="spollers__item">
+									<summary class="spollers__title">Кухонные принадлежности</summary>
+									<div class="spollers__body"> Кухонный набор, включающий посуду и бытовую технику (холодильник, плита,
+										микроволновка и др.).
+									</div>
+								</details>
+								<details class="spollers__item">
+									<summary class="spollers__title">Дополнительные услуги</summary>
+									<div class="spollers__body">Возможности использования услуг трансфера, экскурсий и других сервисов по
+										запросу (за отдельную
+										плату).
+									</div>
+								</details>
+							</div>
+
+						</div>
+					</div>
+			</section>
+
 		</main>
 
 
